# rv-csr-test

./: .gitignore  .gitmodules  Cargo.toml  README.md  justfile
axidma-pac/: axidma.svd  lib.rs
axidma-pac/src/: lib.rs  mm2s_sg_desc.rs
axidma-pac/src/axi_dma/: mm2s_curdesc.rs  mm2s_curdesc_msb.rs  mm2s_dmacr.rs  mm2s_dmasr.rs  mm2s_length.rs  mm2s_sa.rs  mm2s_sa_msb.rs  mm2s_taildesc.rs  mm2s_taildesc_msb.rs  s2mm_curdesc.rs  s2mm_curdesc_msb.rs  s2mm_da.rs  s2mm_da_msb.rs  s2mm_dmacr.rs  s2mm_dmasr.rs  s2mm_length.rs  s2mm_taildesc.rs  s2mm_taildesc_msb.rs  sg_ctl.rs
src/: config.rs  console.rs  entry.asm  lang_items.rs  linker-lrv.ld  linker-qemu.ld  logger.rs  main.rs  mm.rs  plic.rs  sbi.rs  stack.rs  trap.asm  trap.rs  user_uart.rs  xxv_dma_example.rs
src/axidma/: bd.rs  bd_ring.rs  mod.rs
src/net/: xxvethernet.rs
xxv-pac/: xxvethernet.svd
xxv-pac/src/: xxv_ethernet.rs
