[package]
name = "rv-csr-test"
version = "0.1.0"
authors = ["Campbell He <hkp18@mails.tsinghua.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
riscv = { git = "https://github.com/duskmoon314/riscv.git", branch = "extN", features = [
    "inline-asm",
] }
rv-plic = { git = "https://github.com/duskmoon314/rv-plic" }
uart_xilinx = { git = "https://github.com/duskmoon314/uart-rs", optional = true, features = [
    "fmt",
] }

[features]
default = ["board_lrv"]
board_lrv = ["uart_xilinx"]
