[package]
name = "rv-csr-test"
version = "0.1.0"
authors = ["Campbell He <hkp18@mails.tsinghua.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.8.0"
log = "0.4"
riscv = { git = "https://github.com/duskmoon314/riscv.git", branch = "extN", features = [
    "inline-asm",
] }
rv-plic = { git = "https://github.com/duskmoon314/rv-plic" }
uart_xilinx = { version = "*", features = ["fmt"], optional = true }
uart8250 = { version = "*", features = ["fmt"], optional = true }
embedded-hal = "=1.0.0-alpha.4"
nb = "1.0.0"
spin = "0.9"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
blake3 = { version = "1.2.0", default-features = false }
array-init = "2.0.0"

[features]
board_lrv = ["uart_xilinx"]
board_qemu = ["uart8250"]
